Attempted CSS fix for Safari on IOS

--- a/css/root.css
+++ b/css/root.css
@@ -599,6 +599,11 @@ pre code {
 }
 
 @media only screen and (min-width: 940px) {
+  	.main-menu {
+		position: fixed;
+		top: 0;
+  	}
+
   	.burger {
   		display:none;
   	}
